syntax = "proto3";

package atomix.cluster;

option java_package = "io.atomix.cluster.messaging";
option java_multiple_files = true;

// Cluster message.
message Message {
    string type = 1;
    bytes payload = 2;
}

// Cluster messaging service.
service MessagingService {

    rpc SendAndReceive(Message) returns (Message) {}

    rpc SendStream(stream Message) returns (Message) {}

    rpc ReceiveStream(Message) returns (stream Message) {}

    rpc SendAndReceiveStream(stream Message) returns (stream Message) {}

}
